--- a/templates/index.html
+++ b/templates/index.html
@@ -73,15 +73,15 @@
 
     <div class="about_div container">
         <h1>About Algorithm:</h1>
-        <h3>Here we use Artificial Neural Network to train the model. We use 3 hidden layers with total 10,817 trainable parameters. with Relu as an activation function for hidden layers. For prediction purpose we use Sigmoid as activation function. We use
-            Adam optimizer and Binary Crossentropy as a loss function. Our AI model works with <i> 99.3% accuracy</i> which helps in classifying whethere a person is Male or Female from its face measures.
+        <h3>Here we use Artificial Neural Network to train the model. Processing tuner use for model extension. Keras Tuner suggest that alone Forehead Height and Forehead width ignites 95.8% neurons. So dosent require other parameters but still to increase accuracy, more parameters are use. A general classification is done by combining simple dense model and tuner model. Total 10,817 trainable parameters are present with Relu as an activation function for hidden layers. For prediction purpose we use Sigmoid as activation function. We use
+            Adam optimizer and Binary Crossentropy as a loss function. With the help of very customized model we are able to achieve high accuracy by considering just two imp parameters. Our AI model works with <i> 99.3% accuracy</i> which helps in classifying whethere a person is Male or Female from its face measures.
         </h3>
     </div>
 
     <br><br><br>
     <footer>
         <img src="static/logo.png" alt="logo"> <br>
-        <h4>For any query write us at: <a href="mailto:jadhavpranav89@example.com, goelvanshika0108@gmail.com">Mail Me</a></h4>
+        <h4>For any query write us at: <a href="mailto:jadhavpranav89@example.com">Mail Me</a></h4>
         <br><br><br> Copyright © 2023. All Rights Reserved by Team Envelope.
     </footer>
 
